@@ -272,12 +272,46 @@
           </div>
         </blockquote>
         <h3>
+          <a href="javascript:toggle_display('Public Fields')">
+            <span id="Public Fields:toggle">⊟</span> Public Fields</a>
+        </h3>
+        <blockquote id="Public Fields">
+          <div class="SubsectionBox">
+            <table class="TypeMembers">
+              <tr valign="top">
+                <td>
+                  <div>const </div>
+                </td>
+                <td>
+                  <b>
+                    <a href="../Mono.DocTest.Generic/GenericBase`1.html#F:Mono.DocTest.Generic.GenericBase`1.ConstField1">ConstField1</a>
+                  </b>
+                </td>
+                <td>
+                  <i>
+                    <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a>
+                  </i>. <span class="NotEntered">Documentation for this section has not yet been entered.</span> (<i>Inherited from <a href="../Mono.DocTest.Generic/GenericBase`1.html">GenericBase&lt;U&gt;</a>.</i>)</td>
+              </tr>
+            </table>
+          </div>
+        </blockquote>
+        <h3>
           <a href="javascript:toggle_display('Public Methods')">
             <span id="Public Methods:toggle">⊟</span> Public Methods</a>
         </h3>
         <blockquote id="Public Methods">
           <div class="SubsectionBox">
             <table class="TypeMembers">
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td colspan="2">
+                  <b>
+                    <a href="../Mono.DocTest.Generic/GenericBase`1.html#M:Mono.DocTest.Generic.GenericBase`1.BaseMethod``1(``0)">BaseMethod&lt;S&gt;</a>
+                  </b>(<i title="Insert more text here.">S</i>)<nobr> : <i title="I'm Dying Here!">T</i></nobr><blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span> (<i>Inherited from <a href="../Mono.DocTest.Generic/GenericBase`1.html">GenericBase&lt;U&gt;</a>.</i>)</blockquote></td>
+              </tr>
               <tr valign="top">
                 <td>
                   <div>
@@ -337,6 +371,29 @@
                   <b>
                     <a href="#M:Mono.DocTest.Generic.MyList`1.UseHelper``2(Mono.DocTest.Generic.MyList{`0}.Helper{``0,``1})">UseHelper&lt;U,V&gt;</a>
                   </b>(<a href="../Mono.DocTest.Generic/MyList`1+Helper`2.html">MyList&lt;T&gt;.Helper&lt;U, V&gt;</a>)<blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span></blockquote></td>
+              </tr>
+            </table>
+          </div>
+        </blockquote>
+        <h3>
+          <a href="javascript:toggle_display('Public Events')">
+            <span id="Public Events:toggle">⊟</span> Public Events</a>
+        </h3>
+        <blockquote id="Public Events">
+          <div class="SubsectionBox">
+            <table class="TypeMembers">
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td>
+                  <b>
+                    <a href="../Mono.DocTest.Generic/GenericBase`1.html#E:Mono.DocTest.Generic.GenericBase`1.MyEvent">MyEvent</a>
+                  </b>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span> (<i>Inherited from <a href="../Mono.DocTest.Generic/GenericBase`1.html">GenericBase&lt;U&gt;</a>.</i>)</td>
               </tr>
             </table>
           </div>
