@@ -276,6 +276,30 @@
           </div>
         </blockquote>
         <h3>
+          <a href="javascript:toggle_display('Public Fields')">
+            <span id="Public Fields:toggle">⊟</span> Public Fields</a>
+        </h3>
+        <blockquote id="Public Fields">
+          <div class="SubsectionBox">
+            <table class="TypeMembers">
+              <tr valign="top">
+                <td>
+                  <div>const </div>
+                </td>
+                <td>
+                  <b>
+                    <a href="../Mono.DocTest.Generic/GenericBase`1.html#F:Mono.DocTest.Generic.GenericBase`1.ConstField1">ConstField1</a>
+                  </b>
+                </td>
+                <td>
+                  <i>
+                    <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a>
+                  </i>. <span class="NotEntered">Documentation for this section has not yet been entered.</span> (<i>Inherited from <a href="../Mono.DocTest.Generic/GenericBase`1.html">GenericBase&lt;U&gt;</a>.</i>)</td>
+              </tr>
+            </table>
+          </div>
+        </blockquote>
+        <h3>
           <a href="javascript:toggle_display('Public Properties')">
             <span id="Public Properties:toggle">⊟</span> Public Properties</a>
         </h3>
@@ -316,6 +340,16 @@
         <blockquote id="Public Methods">
           <div class="SubsectionBox">
             <table class="TypeMembers">
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td colspan="2">
+                  <b>
+                    <a href="../Mono.DocTest.Generic/GenericBase`1.html#M:Mono.DocTest.Generic.GenericBase`1.BaseMethod``1(``0)">BaseMethod&lt;S&gt;</a>
+                  </b>(<i title="Insert more text here.">S</i>)<nobr> : <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Collections.Generic.Dictionary`2">Dictionary&lt;A, B&gt;</a></nobr><blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span> (<i>Inherited from <a href="../Mono.DocTest.Generic/GenericBase`1.html">GenericBase&lt;U&gt;</a>.</i>)</blockquote></td>
+              </tr>
               <tr valign="top">
                 <td>
                   <div>
@@ -375,6 +409,29 @@
                   <b>
                     <a href="#M:Mono.DocTest.Generic.MyList`2.Reset">Reset</a>
                   </b>()<blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span></blockquote></td>
+              </tr>
+            </table>
+          </div>
+        </blockquote>
+        <h3>
+          <a href="javascript:toggle_display('Public Events')">
+            <span id="Public Events:toggle">⊟</span> Public Events</a>
+        </h3>
+        <blockquote id="Public Events">
+          <div class="SubsectionBox">
+            <table class="TypeMembers">
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td>
+                  <b>
+                    <a href="../Mono.DocTest.Generic/GenericBase`1.html#E:Mono.DocTest.Generic.GenericBase`1.MyEvent">MyEvent</a>
+                  </b>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span> (<i>Inherited from <a href="../Mono.DocTest.Generic/GenericBase`1.html">GenericBase&lt;U&gt;</a>.</i>)</td>
               </tr>
             </table>
           </div>
